--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Werkzeug==3.0.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
+charset-normalizer==3.3.2
+discord.py==2.3.2
+frozenlist==1.4.0
+idna==3.4
+multidict==6.0.4
+python-dotenv==1.0.0
+yarl==1.9.2
