added OpenAI agent

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ DEV_USER_ID=<your master-user id
 
 MODERATOR_TOKEN=<your moderator bot token>
 PLAIER_TOKEN=<your ai-player bot token>
+
+OPENAI_API_KEY=<your openai api key>
+OPENAI_ORGANIZATION=<your openai organization id>
