--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,35 @@
 aiohttp==3.8.6
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
 astroid==3.0.1
 async-timeout==4.0.3
 attrs==23.1.0
+certifi==2023.7.22
 charset-normalizer==3.3.2
 colorama==0.4.6
 dill==0.3.7
 discord.py==2.3.2
+distro==1.8.0
 emoji==2.8.0
+exceptiongroup==1.1.3
 frozenlist==1.4.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
 isort==5.12.0
 mccabe==0.7.0
 multidict==6.0.4
+openai==1.3.0
 platformdirs==4.0.0
+pydantic==2.5.1
+pydantic_core==2.14.3
 pylint==3.0.2
 python-dotenv==1.0.0
+sniffio==1.3.0
 tomli==2.0.1
 tomlkit==0.12.2
+tqdm==4.66.1
 typing_extensions==4.8.0
 yarl==1.9.2
